--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -23,12 +23,12 @@
     top: 70px;
     left: 0;
     height: 100%;
-    z-index: 500; /* Lower than the navbar's z-index */
+    z-index: 500;
     background-color: #f8f9fa;
 }
 
 .side-bar {
-    padding: 30px 0;
+    padding: 20px 0;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     width: 250px;
@@ -72,8 +72,7 @@
 }
 
 .side-bar .nav-link:hover {
-    color: var(--sidebar-hover-text);
-    background-color: rgb(212, 209, 209);
+    background-color: black;
     border-radius: 10px;
 }
 
@@ -81,11 +80,11 @@
     font-size: 16px;
 }
 
+
 .side-bar .fa-angles-right,
 .side-bar .fa-angles-left {
     color: var(--sidebar-text-color);
     background-color: var(--arrow-bg);
-    margin-left: 80%;
     width: 40px;
     height: 40px;
     border-radius: 10px;
@@ -94,36 +93,33 @@
 }
 
 .side-bar.active .fa-angles-right{
-    margin-left: 10%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.side-bar.active .nav-link{
+.side-bar.active .nav-item .accordion-item .nav-text{
     display: none;
 }
 
-.side-bar .logout {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
 
 .side-bar.active {
     width: 80px;
 }
 
 
-
 .main-content {
     position: relative;
-    top:70px;
-    margin-left: 250px; /* Margen para evitar superposición con el sidebar */
+    top: 40px;
+    margin-left: 220px; /* Margen para evitar superposición con el sidebar */
     flex: 1;
     padding: 20px 10px;
     background-color: var(--bg-color);
     transition: margin-left var(--transition-speed) ease;
-    
 }
+.side-bar.active + .main-content{
+    margin-left: 70px;
+}
+
 
 @media (max-width: 875px) {
     .side-bar {
@@ -134,7 +130,6 @@
         margin:40px;
     }
 }
-
 
 .pagination {
     display: flex;
