--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -134,16 +134,24 @@
                                     <span class="nav-item"> Reportes del Personal </span>
                                 </a>
                             </li>
-                            <li>
+                            <li class="mb-2">
                                 <a class="nav-link text-white active d-flex align-items-center"
-                                    href="{% url 'auditoria:listar_auditoria' %}">
-                                    <i class="fa-sharp fa-solid fa-folder me-2"></i>
-                                    <span class="nav-item"> Auditoría </span>
+                                    href="{% url 'reportesCoord:resumen_datos' %}">
+                                    <i class="fa-solid fa-box-tissue me-2"></i>
+                                    <span class="nav-item"> Gráficos y estadísticas </span>
                                 </a>
                             </li>
+                            
                         </ul>
                     </div>
                 </div>
+            </li>
+             <li class="nav-item mb-2">
+                <a class="nav-link text-white active d-flex align-items-center"
+                    href="{% url 'auditoria:listar_auditoria' %}">
+                    <i class="fa-sharp fa-solid fa-folder me-2"></i>
+                    <span class="nav-item"> Auditoría </span>
+                </a>
             </li>
             {% endif %}
             {% if request.user.rol and request.user.rol.name == 'Agente' %}
