--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -55,6 +55,12 @@
                     {% endblock %}
                 </div>
             </div>
+
+
+            <!-- Gráficos -->
+            {% block charts %}
+            <!-- Aquí se insertarán los gráficos en los templates específicos -->
+            {% endblock %}
             <div class="table-container">
                 <h5 class="text-center bg-dark text-white p-3">{{ title_table }}</h5>
                 <div class="table-responsive">
