--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -106,6 +106,58 @@
     width: 80px;
 }
 
+/* Contenedor general para los gráficos */
+.charts-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 40px;
+}
+
+/* Estilo para cada gráfico */
+.chart-card {
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Contenedor del resumen general */
+.summary-container {
+    width: 80%;
+    margin: 40px auto;
+    text-align: center;
+}
+
+/* Estilos de los items del resumen */
+.summary-content {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.summary-item {
+    padding: 20px;
+    background-color: #f4f4f9;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 200px;
+}
+
+.summary-item h4 {
+    color: #333;
+}
+
+.summary-item p {
+    font-size: 1.2em;
+    color: #666;
+}
+
 
 .main-content {
     position: relative;
