--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -193,6 +193,11 @@
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.min.js"></script>
+
+   
     <script src="{% static 'js/side_bar.js' %}"></script>
     <script src="{% static 'js/modal.js' %}"></script>
     
