--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -144,7 +144,7 @@
                             </li>
                             <li>
                                 <a class="nav-link text-white d-flex align-items-center"
-                                    href="{% url 'reportesCoord:listar_auditoria' %}">
+                                    href="{% url 'auditoria:listar_auditoria' %}">
                                     <i class="fa-sharp fa-solid fa-folder me-2"></i>
                                     <span class="nav-text"> Auditoría </span>
                                 </a>
